--- a/scheduler/src/main/resources/application.properties
+++ b/scheduler/src/main/resources/application.properties
@@ -1,7 +1,2 @@
-spring.application.name=scheduler
-driver=org.postgresql.Driver
-url=jdbc:postgresql://localhost/scheduler
-username=postgres
-password=111
-
-server.error.whitelabel.enabled=false
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
