--- a/scheduler/src/main/resources/application.properties
+++ b/scheduler/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=nastya
+spring.datasource.password=111
+
