--- a/scheduler/src/main/resources/application.properties
+++ b/scheduler/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=nastya
 spring.datasource.password=111
 spring.jpa.hibernate.ddl-auto=update
+logging.level.ru.msu.cmc.scheduler=DEBUG
